--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.4.0",
     "lucide-react": "^0.439.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
